added info on Security class; updated other classes

--- a/classes/BASM/index.html
+++ b/classes/BASM/index.html
@@ -31,6 +31,10 @@
       <section>
         <h2 id="class:-business-analytics-using-statistical-modeling">Class: Business Analytics Using Statistical Modeling</h2>
 
+<h3 id="resources">Resources</h3>
+
+<p>Class overview: <a href="https://docs.google.com/document/d/1D8B5RHUkllzYolMUvQpV0jhAQcmmhZMzWxYmJG3CnG0/edit">Latest Syllabus</a></p>
+
 <p><em>Prerequisites: Introductory probability and statistics</em></p>
 
 <h3 id="description">Description</h3>
