--- a/classes/SEC/index.html
+++ b/classes/SEC/index.html
@@ -33,16 +33,14 @@
 
 <h3 id="resources">Resources</h3>
 
-<p>Class overview: <a href="https://docs.google.com/spreadsheets/d/1R1h9srDttvKKJvsrOPTt_zgoLfbRRtQErWsv7QrVfMg/edit">Latest Schedule</a></p>
+<p>Class overview: <a href="https://docs.google.com/document/d/1D8B5RHUkllzYolMUvQpV0jhAQcmmhZMzWxYmJG3CnG0/edit">Latest Syllabus</a></p>
 
 <p><em>Prerequisites: Object-oriented programming, Databases, HTML/CSS</em><br>
-<em>Recommended: Systems analysis and design</em></p>
+<em>Highly Recommended: <a href="/classes/SOA/">Service Oriented Architecture</a></em></p>
 
 <p>Online development resources:
 <div id="horiz_container">
-  <div id="SNSbutton"><a href="https://www.facebook.com/groups/ISS.SOAD/">Facebook Page</a></div>
-  <div id="SNSbutton"><a href="https://github.com/ISS-SOA/class-SOA-repo">Github Site</a></div>
-  <div id="SNSbutton"><a href="https://github.com/ISS-SOA/class-SOA-repo/wiki">Github Wiki</a></div>
+  <div id="SNSbutton"><a href="https://www.facebook.com/groups/service.sec/">Facebook Page</a></div>
 </div></p>
 
 <h3 id="description">Description</h3>
@@ -50,31 +48,25 @@
 <h4 id="learning-objectives">Learning Objectives</h4>
 
 <ul>
-<li>Consuming, delivering, orchestrating, and composing IT services</li>
-<li>IT architectures for business processes</li>
-<li>Creating flexible, scalable systems</li>
-<li>Adopting practices of distributed development</li>
-<li>Deploying services for open use and development</li>
+<li>Develop software with secure qualities: confidentiality, integrity, authentication, authorization, availability, nonrepudiation</li>
+<li>Model secure systems, policies</li>
+<li>Interpret security news and derive knowledge about systems</li>
+<li>Understand tradeoffs between security philosophies and practices</li>
 </ul>
 
 <h4 id="course-outline">Course Outline</h4>
 
 <ul>
-<li>Distributed coding and version control</li>
-<li>Object enumeration, serialization and marshalling</li>
-<li>Service controllers: RESTful API, event logging</li>
-<li>Service views: Web, mobile, SNS, Google analytics</li>
-<li>Service resources: database, computational, 3rd party services, DOM traversal</li>
-<li>Cloud deployment, SaaS, create open-source SDK</li>
-<li>Enterprise architecture design patterns</li>
-<li>Workflows and messaging</li>
+<li>Cryptographic principles: information theory, error-checking, ciphers, hashing, trust models</li>
+<li>Secure software: certificates, tokens, OAuth, testing, refactoring, protocols, benchmarking, testing and behavior driven development</li>
+<li>Discretionary and mandatory policies: Biba, Bell LaPadula, Brewer-Nash, etc.; lattice modeling</li>
+<li>Configuring robust network software: DMZs, memcached, load balancing, etc.</li>
 </ul>
 
 <h4 id="tools">Tools</h4>
 
 <ul>
-<li>Ruby, Sinatra, Haml, CSS, JSON, BPMN,</li>
-<li>Git, Github, Heroku, Redis, PostIronMQ, Amazon AWS</li>
+<li>Ruby, Sinatra</li>
 </ul>
 
 <h3 id="relation-to-service-oriented-information-technology">Relation to Service Oriented Information Technology</h3>
@@ -91,7 +83,7 @@
 <h4 id="related-skills">Related Skills</h4>
 
 <ul>
-<li>Key techniques: distributed coding and version control, cloud deployment and SaaS development, behavior-driven development.</li>
+<li>Key techniques: service quality and security management, distributed coding and version control, cloud deployment and SaaS development, behavior-driven development.</li>
 <li>Key capabilities: modern programming skills, software system development</li>
 </ul>
 
@@ -105,9 +97,8 @@
 <h4 id="related-careers">Related Careers</h4>
 
 <ul>
-<li>IT entrepreneur: adopt lean development tools and methods to bootstrap an IT startup.</li>
-<li>IT enabled service designer: use design-science to give a design capability to IT-enabled services.</li>
-<li>IT project manager: use modern development methodology to track, analyze, and plan IT projects.</li>
+<li>IT security expert: employ the latest practices in secure development and deploymnet; advise on secure practices.</li>
+<li>IT project manager: oversee high quality software development.</li>
 <li>IT service developer: create robust software using modern development tools and methodology.</li>
 </ul>
 
