--- a/classes/index.html
+++ b/classes/index.html
@@ -41,15 +41,21 @@ This class favors the tools and practices of IT startups and the open source mov
 
 <h3 id="business-analytics-using-statistical-modeling">Business Analytics Using Statistical Modeling</h3>
 
-<p>[<a href="/classes/BASM">Detailed information</a> | Syllabus coming in August]<br></p>
+<p>[<a href="/classes/BASM">Detailed information</a> | <a href="https://docs.google.com/document/d/1D8B5RHUkllzYolMUvQpV0jhAQcmmhZMzWxYmJG3CnG0/edit">Syllabus</a>]</p>
 
 <p>This class develops skills to understand the nature of data and infer knowledge from it.
 We will learn how to match our intuition and prior theory with simulation, visualization, and statistical techniques.
-This class favors the tools and techniques of marketing research and practice.</p>
+This class favors the tools and techniques of marketing research and practice. The class will entail handling
+both small and large volumes of data, and student teams will analyze real data from partner companies.</p>
 
 <h3 id="service-security">Service Security</h3>
 
-<p>More information coming this Fall (check back in November/December)</p>
+<p>[<a href="/classes/SEC">Detailed information</a>]</p>
+
+<p>This class transforms students understanding of what information security is, from the basics of information theory to cryptographic
+principles, secure software development, and security policies. In terms of development, students will learn to implement elements
+such as single sign-on to enhance authentication, PKI to ensure confidentiality, messaging and load-balancing to enhance availability,
+and more.</p>
 
 <hr>
 
