Updated: readme, social.md

--- a/social/index.html
+++ b/social/index.html
@@ -29,9 +29,9 @@
 
       </header>
       <section>
-        <h2 id="social-contact">Social Contact</h2>
+        <h2 id="find-me-online">Find Me Online</h2>
 
-<p>Find me on:</p>
+<p>Find me socially on:</p>
 
 <div id="horiz_container">
   <div id="SNSbutton"><a href="https://www.facebook.com/soumya.ray.prof">Facebook</a></div>
