Updated	awards, service, and side_menu

--- a/service/index.html
+++ b/service/index.html
@@ -21,9 +21,9 @@
         <p></p>
           <p class="view"><a href="/research">Research</a></p>
 <p class="view"><a href="/background">Academic background</a></p>
+<p class="view"><a href="/awards">Awards and Grants</a></p>
 <p class="view"><a href="/service">Academic service</a></p>
 <p class="view"><a href="/classes">Classes and Instruction</a></p>
-<p class="view"><a href="/awards">Awards and Grants</a></p>
 <p class="view"><a href="https://github.com/soumyaray">Github/soumyaray</a></p>
 <p class="view"><a href="/social">Find me online</a></p>
 
@@ -31,16 +31,17 @@
       <section>
         <h2 id="professional-service">Professional Service</h2>
 
-<h3 id="reviewer-for-journals:">Reviewer for journals:</h3>
+<h3 id="journal-reviews:">Journal Reviews:</h3>
 
 <ul>
-<li>MIS Quarterly - MISQ 2012, 2013, 2014</li>
-<li>Information Systems Research - ISR 2012</li>
-<li>Decision Support Systems - DSS 2013</li>
-<li>DATA BASE - 2012, 2013</li>
-<li>International Journal of Quality and Service Sciences - IJQSS 2014</li>
-<li>Information Systems and e-Business Management - ISEB 2012</li>
-<li>Pacific Asian Journal of the Association for Information Systems - PAJAIS 2011</li>
+<li>MIS Quarterly (MISQ) - 2014, 2013, 2012</li>
+<li>Information Systems Research (ISR) - 2012</li>
+<li>Decision Sciences Journal (DSJ) - 2014</li>
+<li>Decision Support Systems (DSS) - 2013</li>
+<li>DATA BASE - 2013, 2012</li>
+<li>International Journal of Quality and Service Sciences (IJQSS) - 2014</li>
+<li>Information Systems and e-Business Management (ISEB) - 2012</li>
+<li>Pacific Asian Journal of the Association for Information Systems (PAJAIS) - 2011</li>
 <li>National Taiwan University (NTU) Management Review  - 2014</li>
 </ul>
 
@@ -51,13 +52,14 @@
 <li>Discussant: International Association for Management of Technology (IAMOT) 2012</li>
 </ul>
 
-<h3 id="reviewer-for-conferences:">Reviewer for conferences:</h3>
+<h3 id="conference-reviews:">Conference Reviews:</h3>
 
 <ul>
-<li>International Conference on Information Systems - ICIS 2012</li>
-<li>Hawaii International Conference on System Sciences - HICSS 2011, 2013, 2014</li>
-<li>International Conference on Information Resources Management - ICIRM 2011</li>
-<li>Pacific Asia Conference on Information Systems - PACIS 2009</li>
+<li>International Conference on Information Systems (ICIS) - 2014, 2012</li>
+<li>Hawaii International Conference on System Sciences (HICSS) - 2014, 2013, 2011</li>
+<li>International Conference on Information Resources Management (ICIRM) - 2011</li>
+<li>Pacific Asia Conference on Information Systems (PACIS) - 2009</li>
+<li>CHI 2015</li>
 </ul>
 
 <h3 id="invited-talks-(taiwan):">Invited talks (Taiwan):</h3>
@@ -65,7 +67,7 @@
 <ul>
 <li>National Taiwan University (2011)</li>
 <li>National Central University (2012)</li>
-<li>National Sun Yat-Sen University (2012, 2013)</li>
+<li>National Sun Yat-Sen University (2013, 2012)</li>
 <li>National Tsing-Hua University (2012)</li>
 <li>Yuan-Ze University (2012)</li>
 </ul>
