--- a/awards/index.html
+++ b/awards/index.html
@@ -21,9 +21,9 @@
         <p></p>
           <p class="view"><a href="/research">Research</a></p>
 <p class="view"><a href="/background">Academic background</a></p>
+<p class="view"><a href="/awards">Awards and Grants</a></p>
 <p class="view"><a href="/service">Academic service</a></p>
 <p class="view"><a href="/classes">Classes and Instruction</a></p>
-<p class="view"><a href="/awards">Awards and Grants</a></p>
 <p class="view"><a href="https://github.com/soumyaray">Github/soumyaray</a></p>
 <p class="view"><a href="/social">Find me online</a></p>
 
@@ -31,11 +31,17 @@
       <section>
         <h2 id="awards-and-grants">Awards and Grants</h2>
 
-<h3 id="academic-awards:">Academic Awards:</h3>
+<h3 id="research-awards:">Research Awards:</h3>
 
 <ul>
 <li>Wu Ta-You Award — 2012 <em>(National Science Council)</em></li>
 <li>New Faculty Research Award — 2012 <em>(National Tsing Hua University)</em></li>
+</ul>
+
+<h3 id="service-awards:">Service Awards:</h3>
+
+<ul>
+<li>Outstanding Reviewer - 2014 <em>(Decision Sciences Journal)</em></li>
 </ul>
 
 <h3 id="grants">Grants</h3>
