jekyll build to update paper citation counts

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <div class='pub_ref'>
     Hsu, P., Ray, S., & Li-Hsieh, Y. 2014. “Examining cloud computing adoption intention, pricing mechanism, and deployment model”
     <br>
-    <span class='journal'>International Journal of Information Management</span>
+    <span class='journal'>International Journal of Information ManagementExamining cloud computing adoption intention, pricing mechanism, and deployment modelPF Hsu, S Ray, YY Li-Hsieh - International Journal of Information Management, 2014Cited by 3 - Related articles</span>
     <span>(34:4), pp. 474-488.</span>
   </div>
   <div class='pub_url'>
@@ -103,7 +103,7 @@
     </a>
   </div>
   <div class='pub_cit'>
-    cited 2 times
+    cited 3 times
   </div>
 </div>
 
@@ -122,7 +122,7 @@
     </a>
   </div>
   <div class='pub_cit'>
-    cited 19 times
+    cited 20 times
   </div>
 </div>
 
@@ -141,7 +141,7 @@
     </a>
   </div>
   <div class='pub_cit'>
-    cited 21 times
+    cited 22 times
   </div>
 </div>
 
