Used htmlproof to fix broken links

--- a/classes/index.html
+++ b/classes/index.html
@@ -59,7 +59,7 @@ and more.</p>
 
 <hr>
 
-<p>For more information on any of these classes, please do not hesitate to <a href="social">contact me</a>.</p>
+<p>For more information on any of these classes, please do not hesitate to <a href="/social">contact me</a>.</p>
 
       </section>
 
@@ -75,7 +75,7 @@ and more.</p>
 
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+    <script src="/javascripts/scale.fix.js"></script>
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
