--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </a>
   </div>
   <div class='pub_cit'>
-    cited 3 times
+    cited 6 times
   </div>
 </div>
 
@@ -122,7 +122,7 @@
     </a>
   </div>
   <div class='pub_cit'>
-    cited 20 times
+    cited 21 times
   </div>
 </div>
 
@@ -141,7 +141,7 @@
     </a>
   </div>
   <div class='pub_cit'>
-    cited 22 times
+    cited 23 times
   </div>
 </div>
 
@@ -161,7 +161,7 @@
 
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+    <script src="/javascripts/scale.fix.js"></script>
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
