--- a/secure/index.html
+++ b/secure/index.html
@@ -102,7 +102,7 @@ fxn41vJz/fy77cjSAvQzF4/qAvfARU141vtHzObNsGTPxf+dr1VjyySC1QHySN1I
 
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+    <script src="/javascripts/scale.fix.js"></script>
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
