--- a/classes/SEC/index.html
+++ b/classes/SEC/index.html
@@ -33,7 +33,7 @@
 
 <h3 id="resources">Resources</h3>
 
-<p>Class overview: <a href="https://docs.google.com/document/d/1D8B5RHUkllzYolMUvQpV0jhAQcmmhZMzWxYmJG3CnG0/edit">Latest Syllabus</a></p>
+<p>Class overview: <a href="https://docs.google.com/document/d/1gJcwh5cPN0kFbP6-qnpu-_V3XQ_AQP1ux8RhnGOpk3I/edit?usp=sharing">Latest Syllabus</a></p>
 
 <p><em>Prerequisites: Object-oriented programming, Databases, HTML/CSS</em><br>
 <em>Highly Recommended: <a href="/classes/SOA/">Service Oriented Architecture</a></em></p>
@@ -41,6 +41,8 @@
 <p>Online development resources:
 <div id="horiz_container">
   <div id="SNSbutton"><a href="https://www.facebook.com/groups/service.sec/">Facebook Page</a></div>
+  <div id="SNSbutton"><a href="https://github.com/ISS-Security/class-SEC">Github Repo</a></div>
+  <div id="SNSbutton"><a href="https://github.com/ISS-Security/class-SEC/wiki">Wiki</a></div>
 </div></p>
 
 <h3 id="description">Description</h3>
@@ -49,7 +51,7 @@
 
 <ul>
 <li>Develop software with secure qualities: confidentiality, integrity, authentication, authorization, availability, nonrepudiation</li>
-<li>Model secure systems, policies</li>
+<li>Model secure systems and policies</li>
 <li>Interpret security news and derive knowledge about systems</li>
 <li>Understand tradeoffs between security philosophies and practices</li>
 </ul>
@@ -60,13 +62,13 @@
 <li>Cryptographic principles: information theory, error-checking, ciphers, hashing, trust models</li>
 <li>Secure software: certificates, tokens, OAuth, testing, refactoring, protocols, benchmarking, testing and behavior driven development</li>
 <li>Discretionary and mandatory policies: Biba, Bell LaPadula, Brewer-Nash, etc.; lattice modeling</li>
-<li>Configuring robust network software: DMZs, memcached, load balancing, etc.</li>
+<li>Configuring robust software systems: benchmarking, performance testing, memcached, CDNs, load balancing, etc.</li>
 </ul>
 
-<h4 id="tools">Tools</h4>
+<h4 id="development-tools-and-services">Development Tools and Services</h4>
 
 <ul>
-<li>Ruby, Sinatra</li>
+<li>Ruby, Sinatra, Git, Github, Heroku, Amazon AWS</li>
 </ul>
 
 <h3 id="relation-to-service-oriented-information-technology">Relation to Service Oriented Information Technology</h3>
