--- a/classes/index.html
+++ b/classes/index.html
@@ -50,12 +50,9 @@ both small and large volumes of data, and student teams will analyze real data f
 
 <h3 id="service-security">Service Security</h3>
 
-<p>[<a href="/classes/SEC">Detailed information</a>]</p>
+<p>[<a href="/classes/SEC">Detailed information</a> | <a href="https://docs.google.com/document/d/1gJcwh5cPN0kFbP6-qnpu-_V3XQ_AQP1ux8RhnGOpk3I/edit?usp=sharing">Syllabus</a>]</p>
 
-<p>This class transforms students understanding of what information security is, from the basics of information theory to cryptographic
-principles, secure software development, and security policies. In terms of development, students will learn to implement elements
-such as single sign-on to enhance authentication, PKI to ensure confidentiality, messaging and load-balancing to enhance availability,
-and more.</p>
+<p>This class transforms students understanding of what information security is and their ability to develop secure software. We start from the basics of information theory to cryptographic principles, secure software development, and security policies. Students will learn to develop elements such as single sign-on to enhance authentication, digital signatures and tokens to create secure ecosystems, messaging, configuring content-delivery networks, and more.</p>
 
 <hr>
 
