--- a/index.html
+++ b/index.html
@@ -52,98 +52,28 @@
 
 <!-- ISR paper 2014 (OC-ENG) -->
 
-<div class='pub'>
-  <div class='pub_ref'>
-    Ray, S., Kim, S.S., & Morris, J.G. 2014. “The Central Role of Engagement in Online Communities”
-    <br>
-    <span class='journal'>Information Systems Research</span>
-    <span>(25:3), pp. 528-546.</span>
-  </div>
-  <div class='pub_url'>
-    <a href='http://pubsonline.informs.org/doi/abs/10.1287/isre.2014.0525'>
-      find it online
-    </a>
-  </div>
-  <div class='pub_cit'>
-    cited 1 times
-  </div>
-</div>
+<p>Ray, S., Kim, S.S., &amp; Morris, J.G. 2014. “The Central Role of Engagement in Online Communities”
+<br><em>Information Systems Research</em> (25:3), pp. 528-546.</p>
 
 <!-- IJIM paper 2014 (CLOUD-TOE) -->
 
-<div class='pub'>
-  <div class='pub_ref'>
-    Hsu, P., Ray, S., & Li-Hsieh, Y. 2014. “Examining cloud computing adoption intention, pricing mechanism, and deployment model”
-    <br>
-    <span class='journal'>International Journal of Information Management</span>
-    <span>(34:4), pp. 474-488.</span>
-  </div>
-  <div class='pub_url'>
-    <a href='http://www.sciencedirect.com/science/article/pii/S0268401214000449'>
-      find it online
-    </a>
-  </div>
-  <div class='pub_cit'>
-    cited 6 times
-  </div>
-</div>
+<p>Hsu, P., Ray, S., &amp; Li-Hsieh, Y. 2014. “Examining cloud computing adoption intention, pricing mechanism, and deployment model”
+<br><em>International Journal of Information Management</em> (34:4), pp. 474-488.</p>
 
 <!-- I&M paper 2013 (LOYHAB) -->
 
-<div class='pub'>
-  <div class='pub_ref'>
-    Ray, S., and Seo, D. 2013. “The interplay of conscious and automatic mechanisms in the context of routine use: An integrative and comparative study of contrasting mechanisms”
-    <br>
-    <span class='journal'>Information & Management</span>
-    <span>(50:7), pp. 523-539.</span>
-  </div>
-  <div class='pub_url'>
-    <a href='http://www.sciencedirect.com/science/article/pii/S0378720613000803'>
-      find it online
-    </a>
-  </div>
-  <div class='pub_cit'>
-    cited 3 times
-  </div>
-</div>
+<p>Ray, S., and Seo, D. 2013. “The interplay of conscious and automatic mechanisms in the context of routine use: An integrative and comparative study of contrasting mechanisms”
+<br><em>Information &amp; Management</em> (50:7), pp. 523-539.</p>
 
 <!-- ISR paper 2012 (ePSC) -->
 
-<div class='pub'>
-  <div class='pub_ref'>
-    Ray, S., Kim, S.S., & Morris, J.G. 2012. “Research NoteOnline Users' Switching Costs: Their Nature and Formation”
-    <br>
-    <span class='journal'>Information Systems Research</span>
-    <span>(23:1), pp. 197-213.</span>
-  </div>
-  <div class='pub_url'>
-    <a href='http://pubsonline.informs.org/doi/abs/10.1287/isre.1100.0340'>
-      find it online
-    </a>
-  </div>
-  <div class='pub_cit'>
-    cited 21 times
-  </div>
-</div>
+<p>Ray, S., Kim, S.S., &amp; Morris, J.G. 2012. “Research NoteOnline Users&#39; Switching Costs: Their Nature and Formation”
+<br><em>Information Systems Research</em> (23:1), pp. 197-213.</p>
 
 <!-- DS paper 2011 (SEC) -->
 
-<div class='pub'>
-  <div class='pub_ref'>
-    Ray, S., Ow, T., & Kim, S.S. 2011. “Security Assurance: How Online Service Providers Can Influence Security Control Perceptions and Gain Trust”
-    <br>
-    <span class='journal'>Decision Sciences</span>
-    <span>(42:2), pp. 391-412.</span>
-  </div>
-  <div class='pub_url'>
-    <a href='http://onlinelibrary.wiley.com/doi/10.1111/j.1540-5915.2011.00316.x/full'>
-      find it online
-    </a>
-  </div>
-  <div class='pub_cit'>
-    cited 23 times
-  </div>
-</div>
+<p>Ray, S., Ow, T., &amp; Kim, S.S. 2011. “Security Assurance: How Online Service Providers Can Influence Security Control Perceptions and Gain Trust”
+<br><em>Decision Sciences</em> (42:2), pp. 391-412.</p>
 
 <p><br><br></p>
 
