Add 2015 teaching awards

--- a/awards/index.html
+++ b/awards/index.html
@@ -44,6 +44,13 @@
 <li>Outstanding Reviewer - 2014 <em>(Decision Sciences Journal)</em></li>
 </ul>
 
+<h3 id="teaching-awards:">Teaching Awards:</h3>
+
+<ul>
+<li>Outstanding Teaching Award - 2015 <em>(National Tsing Hua University)</em></li>
+<li>Outstanding Teaching Award - 2015 <em>(College of Technology Management)</em></li>
+</ul>
+
 <h3 id="grants">Grants</h3>
 
 <ul>
