--- a/background/index.html
+++ b/background/index.html
@@ -31,16 +31,10 @@
       <section>
         <h2 id="academic-experience">Academic Experience</h2>
 
-<table>
-  <tr>
-    <td>
-      <b>Assistant Professor</b><br>Aug 2010 - present
-    </td>
-    <td>
-      Institute of Service Science<br>College of Technology Management<br>National Tsing Hua University
-    </td>
-  </tr>
-</table>
+<p><b>Associate Professor</b><br>
+Institute of Service Science<br>
+College of Technology Management<br>
+National Tsing Hua University</p>
 
 <h2 id="education">Education</h2>
 
