--- a/index.html
+++ b/index.html
@@ -29,16 +29,10 @@
 
       </header>
       <section>
-        <table>
-  <tr>
-    <td>
-      <b>Assistant Professor</b><br>Aug 2010 - present
-    </td>
-    <td>
-      Institute of Service Science<br>College of Technology Management<br>National Tsing Hua University
-    </td>
-  </tr>
-</table>
+        <p><b>Associate Professor</b><br>
+Institute of Service Science<br>
+College of Technology Management<br>
+National Tsing Hua University</p>
 
 <div id="horiz_container">
   <div id="SNSbutton"><a href="https://www.facebook.com/soumya.ray.prof">Facebook</a></div>
