Add JBR-2016 paper

--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@ National Tsing Hua University</p>
 
 <h3 id="publications:">Publications:</h3>
 
+<!-- JBR paper 2016 (PLS-Predict) -->
+
+<p>Shmueli, G., Ray, S., Estrada, J. M. V., and Chatla, S. B. 2016. “The elephant in the room: Predictive performance of PLS models,”
+<br><em>Journal of Business Research</em> (forthcoming), pp. 1–13.</p>
+
 <!-- ISR paper 2014 (OC-ENG) -->
 
 <p>Ray, S., Kim, S.S., &amp; Morris, J.G. 2014. “The Central Role of Engagement in Online Communities”
